--- a/main.html
+++ b/main.html
@@ -6,8 +6,27 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body >
 	<!-- the entire body must be written by student -->
+	<h1>My Playlist</h1>
+	<div id="div1">
+		<a target="_blank">Song 1</a><br>
+		<a target="_blank">Song 2</a><br>
+		<a target="_blank">Song 3</a><br>
+		<a target="_blank">Song 4</a><br>
+		<a target="_blank">Song 5</a><br>
+	</div>
+	<h2>Now Playing...</h2>
+	<div>
+		<video controls autoplay class="player_one">
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+		</video>
+		<h2>MP3 songs</h2>
+		<p>Man Meri Jaan</p>
+		<audio controls class="player_two">
+			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+		</audio>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
