--- a/main.html
+++ b/main.html
@@ -10,11 +10,13 @@
 	<!-- the entire body must be written by student -->
 	<h1>My Playlist</h1>
 	<div id="div1">
-		<a target="_blank">Song 1</a><br>
-		<a target="_blank">Song 2</a><br>
-		<a target="_blank">Song 3</a><br>
-		<a target="_blank">Song 4</a><br>
-		<a target="_blank">Song 5</a><br>
+		<ul>
+		<li><a target="_blank">Song 1</a></li>
+		<li><a target="_blank">Song 2</a></li>
+		<li><a target="_blank">Song 3</a></li>
+		<li><a target="_blank">Song 4</a></li>
+		<li><a target="_blank">Song 5</a></li>
+		</ul>
 	</div>
 	<h2>Now Playing...</h2>
 	<div>
@@ -24,7 +26,7 @@
 		<h2>MP3 songs</h2>
 		<p>Man Meri Jaan</p>
 		<audio controls class="player_two">
-			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
 		</audio>
 	</div>
     <script type="text/javascript" src="./script.js">
